apps/default/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
  labels:
    app: home-assistant
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8123
  selector:
    app: home-assistant
  type: LoadBalancer
  loadBalancerIP: 192.168.1.166
